Dodat tag h2 i paragraf

--- a/idex.html
+++ b/idex.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Internet tehnologije</h1>
+    <h2>Git i GitHub</h2>
+    <p>Lokalni i udaljeni repozitorijumi, verzionisanje koda</p>
 </body>
 </html>
